--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ cloudinary==1.31.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.17
+django-ckeditor==6.5.1
+django-js-asset==2.0.0
 django-richtextfield==1.6.1
 gunicorn==20.1.0
 psycopg2==2.9.5
