--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-ckeditor==6.5.1
 django-js-asset==2.0.0
 django-richtextfield==1.6.1
 gunicorn==20.1.0
+Pillow==9.4.0
 psycopg2==2.9.5
 pytz==2022.7.1
 sqlparse==0.4.3
