--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,17 @@ cloudinary==1.31.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.17
+django-allauth==0.52.0
 django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
 django-js-asset==2.0.0
 django-richtextfield==1.6.1
 gunicorn==20.1.0
+oauthlib==3.2.2
 Pillow==9.4.0
 psycopg2==2.9.5
+PyJWT==2.6.0
+python3-openid==3.2.0
 pytz==2022.7.1
+requests-oauthlib==1.3.1
 sqlparse==0.4.3
